fix (HSK-456) adapt size of modal on mobile screens therefore improve tablet breakpoint as well

--- a/source/_patterns/02-organisms/01-components/01-modal.scss
+++ b/source/_patterns/02-organisms/01-components/01-modal.scss
@@ -3,11 +3,17 @@
   flex-flow: column nowrap;
   position: relative;
   background: $colorWhite;
-  margin: 0 auto;
-  width: 66.66%;
-  max-height: 60%;
-  min-width: 280px;
-  max-width: 680px;
+  width: 100%;
+  height: 100%;
+
+  @media only screen and (min-width: $breakpointTablet) {
+    margin: 0 auto;
+    width: 80%;
+    height: auto;
+    max-height: 80%;
+    min-width: 280px;
+    max-width: 680px;
+  }
 
   &-backdrop {
     position: fixed;
@@ -59,6 +65,7 @@
     flex: 1;
     padding: 0 1em 0 0;
     margin: 1em;
+    min-height: 140px;
     p + p {
       margin-top: 1em;
     }
@@ -66,7 +73,11 @@
 
   &__loading-icon {
     display: block;
-    margin: 3em auto;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+
   }
 
 }
